k8s/apps/autodiscover/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autodiscover
  labels:
    app: autodiscover
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: autodiscover
  template:
    metadata:
      labels:
        app: autodiscover
    spec:
      containers:
        - name: autodiscover
          image: monogramm/autodiscover-email-settings:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 128Mi
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
