k8s/apps/autodiscover/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: autodiscover
spec:
  type: ClusterIP
  selector:
    app: autodiscover
  ports:
    - name: http
      port: 80
      targetPort: 8000
